--- a/101-kittens-carousel-static-website-ec2/kittens-carousel-static-website.yml
+++ b/101-kittens-carousel-static-website-ec2/kittens-carousel-static-website.yml
@@ -26,7 +26,7 @@ Resources:
     Properties:
       ImageId: ami-09d95fab7fff3776c
       InstanceType: t2.micro
-      KeyName: call.training
+      KeyName: XXXXXXXXXXXXXXXXXXXX
       SecurityGroupIds:
         - !Ref WebServerSecurityGroup
       Tags:                
@@ -39,8 +39,7 @@ Resources:
             #! /bin/bash
             yum update -y
             yum install httpd -y
-            TOKEN="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
-            FOLDER="https://$TOKEN@raw.githubusercontent.com/clarusway/cw-workshop/dev/aws/projects/101-kittens-carousel-static-website-ec2/static-web/"
+            FOLDER="https://raw.githubusercontent.com/harunkarateketurkiye/my-prjects/main/101-kittens-carousel-static-website-ec2/static-web/"
             curl -s --create-dirs -o "/var/www/html/index.html" -L "$FOLDER"index.html
             curl -s --create-dirs -o "/var/www/html/cat0.jpg" -L "$FOLDER"cat0.jpg
             curl -s --create-dirs -o "/var/www/html/cat1.jpg" -L "$FOLDER"cat1.jpg
